--- a/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/android.html
+++ b/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/android.html
@@ -76,7 +76,7 @@
                 <div class="align-center">
                     <picture>
                         <source media="(max-width: 600px)" srcset="image/bugdroid.png">
-                        <img class="img_conteudo" src="image/bugdroid.png" alt="Foto do mascote do android atual">
+                        <img id="mascote-android-atual" class="img_conteudo" src="image/bugdroid.png" alt="Foto do mascote do android atual">
                     </picture>
                 </div>
                 
