--- a/Html5 Css3/CSS/grid/grid-item/index.html
+++ b/Html5 Css3/CSS/grid/grid-item/index.html
@@ -28,9 +28,20 @@
         }
 
         .item-2{
-            grid-column-start: 2;
-            grid-column-end: 4;
-            grid-column: 2 4;
+            /* grid-column-start: 2;
+            grid-column-end: 4; */
+            /* grid-row-start: 1;
+            grid-row-end: 3; */
+
+            /* grid-column: 2 / 4;
+            grid-row: 1 / 3; */
+
+            grid-area: 1 / 2 / 3 / 4;
+        }
+
+        .item-row{
+            grid-row-start: 3;
+            grid-row-end: 5;
         }
     </style>
 </head>
@@ -40,8 +51,8 @@
         <div class="grid-item item-2">2</div>
         <div class="grid-item">3</div>
         <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
+        <div class="grid-item item-row">5</div>
+        <div class="grid-item item-row">6</div>
         <div class="grid-item">7</div>
     </div>
 </body>
