--- a/Css/transitions/index.html
+++ b/Css/transitions/index.html
@@ -39,6 +39,10 @@
                <span>Button</span>
             </button>
          </div>
+
+         <div class="buttonDiv">
+            <button class="button b5">Button</button>
+         </div>
       </div>
    </main>
 </body>
