FEAT: começo do desenvolvimento do cardapio

--- a/TypeScript/Alura/static-files/public/index.html
+++ b/TypeScript/Alura/static-files/public/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <title>React App</title>
+    <title> Pichau Gaming </title>
 
   </head>
   <body>
